; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_log.c_log_assert_failed_return_realm.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_log.c_log_assert_failed_return_realm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROTECT_ERRNO = common dso_local global i32 0, align 4
@LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [57 x i8] c"Assertion '%s' failed at %s:%u, function %s(). Ignoring.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @log_assert_failed_return_realm(i32 %0, i8* %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %11 = load i32, i32* @PROTECT_ERRNO, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @LOG_DEBUG, align 4
  %14 = call i32 @LOG_REALM_PLUS_LEVEL(i32 %12, i32 %13)
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i8*, i8** %10, align 8
  %19 = call i32 @log_assert(i32 %14, i8* %15, i8* %16, i32 %17, i8* %18, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @log_assert(i32, i8*, i8*, i32, i8*, i8*) #1

declare dso_local i32 @LOG_REALM_PLUS_LEVEL(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
